k8s-configs/orders-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: orders-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway        
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - orders.k8s.local
