k8s-configs/vm-access-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: vm-access-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway        
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.k8s.local"
