k8s-configs/vm-import-serviceentry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: vm-services
  namespace: default
spec:
  hosts:
  - orders.vm.local
  - inventory.vm.local
  - payment.vm.local
  endpoints:
  # These IPs would come from discovery service queries
  - address: 192.168.1.100  # VM running orders service
    ports: { http: 8080 }
  - address: 192.168.1.101  # VM running inventory service  
    ports: { http: 8080 }
  - address: 192.168.1.102  # VM running payment service
    ports: { http: 8080 }
  location: MESH_EXTERNAL
  resolution: STATIC
  ports:
  - number: 8080
    name: http
    protocol: HTTP
